# community-managed-token

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
community-managed-token/program/: Cargo.toml
community-managed-token/program/src/: accounts.rs  instruction.rs  lib.rs  token.rs
community-managed-token/program/tests/: test.rs
community-managed-token/sdk/: .solitarc.js
community-managed-token/sdk/idl/: community_managed_token.json  spl_managed_token.json
