[package]
name = "community-managed-token"
version = "0.1.0"
description = "Community Managed Token"
repository = "https://github.com/magiceden-oss/community-managed-token"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "community_managed_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[dependencies]
solana-program = "1.14.6"
shank = "^0.0.10"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = [ "no-entrypoint", ] }
thiserror = "^1.0.24"
borsh = "0.9.3"

[dev-dependencies]
solana-program-test = "1.14.6"
solana-sdk = "1.14.6"
tokio = { version = "1.8.4", features = ["full"] }
anyhow = "1.0.52"
